# resume-system

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE-CONTEXT.md  CLAUDE.md  README.md  jd-prompt.md  pyproject.toml  setup.sh
config/: Dinesh_Dawonauth_Altis_Data_Engineer_Resume.yaml  Dinesh_Dawonauth_Arcadia_ML_Engineer_Resume.yaml  Dinesh_Dawonauth_Ascendion_Python_Developer_Resume.yaml  Dinesh_Dawonauth_CI_Financial_Data_Analyst_Resume.yaml  Dinesh_Dawonauth_Ignition_Analytics_Engineer_Resume.yaml  Dinesh_Dawonauth_KIT_Global_Data_Analyst_Resume.yaml  Dinesh_Dawonauth_NYTP_AI_Engineer_Resume.yaml  Dinesh_Dawonauth_ONxpress_Data_Analyst_Resume.yaml  Dinesh_Dawonauth_Payson_Data_Scientist_Resume.yaml  Dinesh_Dawonauth_Sailun_BI_Analyst_Resume.yaml  Dinesh_Dawonauth_SearchLabs_Senior_Data_Scientist_Resume.yaml  Dinesh_Dawonauth_Synechron_Python_Developer_Resume.yaml  Dinesh_Dawonauth_TCS_Data_Analyst_Resume.yaml  Dinesh_Dawonauth_Teranet_Data_Scientist_Resume.yaml  job.yaml  syndesus-ds.yaml
content/experience/: experience.yaml
content/projects/: projects.yaml
data/: education.yaml  profile.yaml  skills.yaml
docs/: README.md  architecture.md  cli.md  models.md  testing.md  workflows.md
docs/modules/: rvs-loader.md  rvs-models.md
scripts/: __init__.py  bootstrap.sh  engine.py  lint.sh  protocol-zero.sh  validate.sh  validator.py
scripts/rvs/: __init__.py  loader.py
templates/: resume.html.j2
tests/: __init__.py  test_build_reproducibility.py  test_engine.py  test_registry.py  test_schemas.py  test_traversal.py  test_validator.py
(+41 files in other folders)
